--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "typed.js": "^2.0.15",
     "typescript": "5.0.3"
   },
   "devDependencies": {
