--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "typed.js": "^2.0.15",
     "typescript": "5.0.3"
   },
