--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-slick": "^0.29.0",
+    "react-transition-group": "^4.4.5",
     "slick-carousel": "^1.8.1",
     "typed.js": "^2.0.15",
     "typescript": "5.0.3"
